New statistics package -- adds a graph to the UI
This adds a simple graph to the UI which shows the ikioi (momentum) of a
thread over time.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "grunt-contrib-concat" : "*",
-    "grunt-contrib-uglify" : "*",
-    "grunt-merge-json": "*",
-    "glob": "*"
+    "glob": "^7.1.2",
+    "grunt": "^1.0.3",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-merge-json": "^0.9.7"
   }
 }
